--- a/docs/RepastFAQ/RepastSimphonyFAQ.tex
+++ b/docs/RepastFAQ/RepastSimphonyFAQ.tex
@@ -148,7 +148,7 @@ optimization.
 \item Availability on virtually all modern computing platforms including Windows, Mac OS, and Linux.
 \end{enumerate}
 
-More information on Repast Simphony can be found on the main web site:  \url{http://repast.sourceforge.net}.
+More information on Repast Simphony can be found on the main web site:  \url{https://repast.github.io}.
 You might look at the following papers in the Agent 2006 proceedings at \url{http://www.dis.anl.gov/agent20XY/proceedings/Agent2006.pdf}
 
 Howe, T.R., N.T. Collier, M.J. North, M.T. Parker, and J.R. Vos, "Containing Agents: Contexts, Projections, and Agents," Proceedings of the Agent 2006 Conference on Social Agents: Results and Prospects, Argonne National Laboratory, Argonne, IL USA (September 2006).
