Additional sourceforge url fixes.

--- a/docs/RepastFAQ/RepastSimphonyFAQ.tex
+++ b/docs/RepastFAQ/RepastSimphonyFAQ.tex
@@ -255,9 +255,9 @@ Note that while the above schedules the execution of MyContextBuilder.step, any 
 \subsection{How do I create a custom display?}
 \label{prs:custom_display}
 
-All simphony displays implement IDisplay. \href{http://repast.sourceforge.net/docs/CustomDisplay.java}{CustomDisplay.java} is an example that displays a panel with a simple label in it. Note that most of the methods are empty or return null. The important methods are render, update and getPanel. When update is called the display should update its internal state to reflect the latest state of whatever its displaying. When render is called, the display should draw those updates. getPanel is called during initialization to put a panel into a display tab.
+All simphony displays implement IDisplay. \href{https://repast.github.io/docs/CustomDisplay.java}{CustomDisplay.java} is an example that displays a panel with a simple label in it. Note that most of the methods are empty or return null. The important methods are render, update and getPanel. When update is called the display should update its internal state to reflect the latest state of whatever its displaying. When render is called, the display should draw those updates. getPanel is called during initialization to put a panel into a display tab.
 
-The next step then is telling simphony to load this display during initialization. You do that with a ModelInitializer. The model initializer is run once just after your scenario is loaded. It can be used to add additional items to the scenario tree that's displayed on the left hand side of simphony. Its not immediately obvious but this is actually a tree of actions that simphony executes when it initializes a model prior to a run. A model initializer then can add a custom action that initializes a custom display.  \href{http://repast.sourceforge.net/docs/TrapInitializer.java}{TrapInitializer.java} does just that. The second added controller action is what sets up the custom display. Lastly, you need tell Simphony to run your ModelInitializer and you do that in the scenario.xml file located in your scenario directory (e.g. mousetrap.rs) by adding a model.initializer entry. For example,
+The next step then is telling simphony to load this display during initialization. You do that with a ModelInitializer. The model initializer is run once just after your scenario is loaded. It can be used to add additional items to the scenario tree that's displayed on the left hand side of simphony. Its not immediately obvious but this is actually a tree of actions that simphony executes when it initializes a model prior to a run. A model initializer then can add a custom action that initializes a custom display.  \href{https://repast.github.io/docs/TrapInitializer.java}{TrapInitializer.java} does just that. The second added controller action is what sets up the custom display. Lastly, you need tell Simphony to run your ModelInitializer and you do that in the scenario.xml file located in your scenario directory (e.g. mousetrap.rs) by adding a model.initializer entry. For example,
 
 $\langle$model.initializer class="repast.simphony.demo.mousetrap.TrapInitializer"$\rangle$
 
@@ -333,7 +333,7 @@ public UserMain(){};
 \label{prs:schedule_java}
 To run a simulation purely programmatically with fine control, you need to create a class that extends repast.simphony.engine.environment.AbstractRunner and modify to suit your needs. The runner class can then be used to initialize, step, run, pause, stop and reset the model. This approach uses components from the GUI which is totally user driven and the Batch run which is completely self-contained with no user-interaction.
 
-\href{http://repast.sourceforge.net/docs/TestRunner_2.java}{TestRunner\_2.java} and main class \href{http://repast.sourceforge.net/docs/TestMain_2.java}{TestMain\_2.java}. In this case you won't use either the RepastMain (GUI) or the BatchMain (batch mode), but use the runner class directly. Note that you will need to include the classes from repast.simphony.runtime and repast.simphony.Batch in your classpath to run.
+\href{https://repast.github.io/docs/TestRunner_2.java}{TestRunner\_2.java} and main class \href{https://repast.github.io/docs/TestMain_2.java}{TestMain\_2.java}. In this case you won't use either the RepastMain (GUI) or the BatchMain (batch mode), but use the runner class directly. Note that you will need to include the classes from repast.simphony.runtime and repast.simphony.Batch in your classpath to run.
 
 \subsection{How can I implement regression in Repast Simphony?}
 \label{prs:regression}
