Removed mention of removal of ModelInitializer.agent and ModelInitializer.groovy files.

--- a/docs/RepastJavaGettingStarted/RepastJavaGettingStarted.tex
+++ b/docs/RepastJavaGettingStarted/RepastJavaGettingStarted.tex
@@ -115,14 +115,7 @@ With the perspective now enabled, we now need to create a new Repast Simphony pr
 \end{figure}
 
 \subsection{Building the Model}
-In a Repast Simphony Java simulation, agents do not need to extend any base class or interface. They can be created simply by using Eclipse's ''New Class Wizard''. The Repast Simphony project wizard creates a source directory and default package into which we can create these agent classes. In our case, the package is ``jzombies'', which can be seen immediately under the src directory.\footnote{Package names typically use an internet domain name as the basis for a package name, but for the purposes of this tutorial ``jzombies'' is perfectly fine. See  \href{http://download.oracle.com/javase/tutorial/java/package/namingpkgs.html}{Java Tutorial: packages} for more info.} The wizard has also created two additional files under the jzombies package: \texttt{ModelInitializer.groovy} and \texttt{ModelInitializer.agent}. These are not necessary for this tutorial and so can be deleted.
-
-\vspace{.2in}
-\begin{enumerate}
-\item Click on the  \texttt{ModelInitializer.groovy} file
-\item Press the delete key on your keyboard. 
-\item Repeat for the \texttt{ModelInitializer.agent} file
-\end{enumerate}
+In a Repast Simphony Java simulation, agents do not need to extend any base class or interface. They can be created simply by using Eclipse's ``New Class Wizard''. The Repast Simphony project wizard creates a source directory and default package into which we can create these agent classes. In our case, the package is ``jzombies'', which can be seen immediately under the src directory.\footnote{Package names typically use an internet domain name as the basis for a package name, but for the purposes of this tutorial ``jzombies'' is perfectly fine. See  \href{http://download.oracle.com/javase/tutorial/java/package/namingpkgs.html}{Java Tutorial: packages} for more info.} 
 
 \vspace{.2in}
 We will now create our \texttt{Zombie} and \texttt{Human} classes.
