Updated ReLogo Getting Started Guide (Java 8, output folder).

--- a/docs/ReLogoGettingStarted/ReLogoGettingStarted.tex
+++ b/docs/ReLogoGettingStarted/ReLogoGettingStarted.tex
@@ -89,7 +89,7 @@ This brings up the New ReLogo Project Wizard (Fig.~\ref{fig:newprojectwiz}) whic
 \end{center}
 \end{figure}
 
-What we see is the Zombies project folder, the ``src" subfolder, the ``zombies.relogo" package, and the relevant ReLogo files, in addition to a ``shapes" folder. More on each of these things as we proceed.
+What we see is the Zombies project folder, the ``src" subfolder, the ``zombies.relogo" package, and the relevant ReLogo files, in addition to a ``shapes" folder\footnote{You may also see an ``output" folder which has to do with parameter sweeps and is not within the scope of this guide. See the Repast Batch Getting Started Guide for more information.}. More on each of these things as we proceed.
 
 \subsection{Creating the Human and Zombie turtle types}
 
@@ -915,7 +915,7 @@ Click Next, then Finish (the default location for the text sink is good for the 
 \end{enumerate}
 We've chosen the data items from our data set that we wish to output, in this case in comma-delimited form. As we did for the data set, don't forget to save this setting (Fig.~\ref{fig:save}).
 
-Now we initialize the runtime (Fig.~\ref{fig:initruntime}) and run the model via the \emph{Step} or \emph{Play} buttons. At this point if we quit out of the runtime and return to our workspace we may notice that nothing has changed. However if we select our Zombies project and ``Refresh" it\footnote{The Refresh is necessary when outside processes, in this case our running model, change files from outside the workspace.}, either by right clicking on the project and choosing Refresh from the drop down menu or by pressing the F5 button, we should see the newly generated data file (Fig.~\ref{fig:dataout}). Double-clicking on this file will reveal a comma-delimited four column data set.
+Now we initialize the runtime (Fig.~\ref{fig:initruntime}) and run the model via the \emph{Step} or \emph{Play} buttons. At this point if we quit out of the runtime and return to our workspace we may notice that nothing has changed. However if we select our Zombies project and ``Refresh" it\footnote{The Refresh is necessary when outside processes, in this case our running model, change files from outside the workspace.}, either by right clicking on the project and choosing Refresh from the drop down menu or by pressing the F5 button, we should see the newly generated data file (Fig.~\ref{fig:dataout}). Double-clicking on this file will reveal a comma-delimited three column data set.
 
 \begin{figure}
 \begin{center}
