--- a/docs/RepastFlowGettingStarted/RepastFlowGettingStarted.tex
+++ b/docs/RepastFlowGettingStarted/RepastFlowGettingStarted.tex
@@ -10,6 +10,11 @@
 \usepackage{fancyvrb}
 \usepackage{listings}
 \usepackage{booktabs,footmisc}
+\usepackage[colorlinks = true,
+            linkcolor = black,
+            urlcolor  = blue,
+            citecolor = black,
+            anchorcolor = blue]{hyperref}
 \usepackage{hyperref}
 \usepackage[all]{hypcap}
 
@@ -42,8 +47,7 @@
 \maketitle
 \setcounter{section}{-1}
 
-\section{Before we Get Started}
-Before we can do anything with Repast Simphony, we need to make sure that we have a proper installation of Repast Simphony 2.0. Instructions on downloading and installing Repast Simphony on various platforms can be found on the \href{http://repast.sourceforge.net/download.html}{Repast website}.
+\input{../common/beforeWeGetStarted}
 
 \section{Getting Started with Repast Flowchart}
 We will be building a simple agent-based model involving zombies chasing humans and humans running away from zombies. When we are finished, the running model should look like fig.~\ref{fig:final}.
@@ -113,7 +117,7 @@ Lastly, if Eclipse has defaulted to the ReLogo perspective switch it to the Java
 \end{figure}
 
 \subsection{Building the Model}
-Repast agents may be created through several different paths, such as pure Java agents, Groovy agents, or Flowchart agents.  This tutorial will demonstrate agent design using the Flowchart method.  The Repast Simphony project wizard creates a source directory and default package into which we can create these agent classes. In our case, the package is ``FlowZombies'', which can be seen immediately under the src directory.\footnote{Package names typically use an internet domain name as the basis for a package name, but for the purposes of this tutorial ``FlowZombies'' is perfectly fine. See  \href{http://download.oracle.com/javase/tutorial/java/package/namingpkgs.html}{Java Tutorial: packages} for more info.} The wizard has also created two additional files under the jzombies package: \texttt{ModelInitializer.groovy} and \texttt{ModelInitializer.agent}. These are used for model initialization and will be edited later.
+Repast agents may be created through several different paths, such as pure Java agents, Groovy agents, or Flowchart agents.  This tutorial will demonstrate agent design using the Flowchart method.  The Repast Simphony project wizard creates a source directory and default package into which we can create these agent classes. In our case, the package is ``FlowZombies'', which can be seen immediately under the src directory.\footnote{Package names typically use an internet domain name as the basis for a package name, but for the purposes of this tutorial ``FlowZombies'' is perfectly fine. See  \href{http://download.oracle.com/javase/tutorial/java/package/namingpkgs.html}{Java Tutorial: packages} for more info.} 
 
 To create a new Flowchart agent, right click on the created ``FlowZombies'' package located in the newly create project.  Select ``New'', then ``Other'' and browse to the ``Repast Simphony'' category (Fig.~\ref{fig:newagent1}).  Select ``Agent'' and in the File name, rename the default ``Untititled.agent'' to ``Human.agent'' (Fig.~\ref{fig:newagent2}).  Repeat this process for the Zombie agent, using the name ``Zombie.agent''. 
 
@@ -400,7 +404,20 @@ This looks much like the Zombie code. A \texttt{GridCellNgh} is used to find the
 
 This \texttt{Watch} will watch for any changes to a ``moved" property in the Zombies agent. What this means is whenever any Zombie moves and their moved variable is updated, then this \texttt{Watch} will be checked for each Human. If the query returns true for that particular Human then \texttt{run} will be called immediately on that Human. Our query will return true when the Zombie that moved is within the Moore neighborhood (8 surrounding grid cells) of the Human whose \texttt{Watch} is currently being evaluated.
 
-That completes this part of the code for Zombies and Humans. Now we need to turn to initializing the simulation.  The ModelInitializer agent that was automatically created in the project (Fig.~\ref{fig:mistart}) is used to hold actions done during the simulation initialization, such as creating agents.  This should be relatively straight forward. We create a specified number of Zombies and Humans by looping through some creation code the specified number of times. We add the new Zombies and Humans to context. In adding them to the context we automatically add them to any projections associated with that context.  The completed Model Initializer agent is shown in Fig.~\ref{fig:micomplete}.
+That completes this part of the code for Zombies and Humans. Now we need to turn to initializing the simulation which is achieved with a special type of agent called the ``ModelInitializer.''  The ModelInitializer agent is used to hold actions done during the simulation initialization, such as creating agents.  Create the ModelInitializer agent in the same way as was done with the Human and Zombie agents through the new agent wizard.  It is important that the agent name is exactly ``ModelInitializer'' as Repast will look for this specifically named agent.  
+
+First, create a behavior in the ModelInitializer that will start the initialization process.  This is a behavior step that will occur only one time at the very beginning of the simulation.
+
+Behavior Initialize Model
+\begin{enumerate}
+ \item Step 2: Initialize Model
+ \item Step 4f: Immediate 
+ \item Step 7: initializeModel
+\end{enumerate}
+
+Note that in Step 7 it is important that the property value is exactly ``initializeModel'' as this is a special property name used by the ModelInitializer agent.  Create an End step and connect as shown in Fig.~\ref{fig:mistart}. This initialize behavior and end step are the mimimum required steps in the ModelInitializer to create a runnable simulation.  Without these steps, an error will be produed when the model is initialzed.  Of course, the model inizialzer behavior is still empty so we need to add steps to create the Human and Zombie models.
+
+We will create a specified number of Zombies and Humans by looping through some creation code a specified number of times. We then add the new Zombies and Humans to context. In adding them to the context we automatically add them to any projections associated with that context.  The completed Model Initializer agent is shown in Fig.~\ref{fig:micomplete}.
 
 Property Human Count
 \begin{enumerate}
@@ -425,7 +442,7 @@ Loop Count Humans
 
 Task Create Humans
 \begin{enumerate}
- \item Object agent = CreateAgents("FlowZombies", "FlowZombies.Human",1)
+ \item Object agent = CreateAgents(``FlowZombies'', ``FlowZombies.Human'',1)
  \item Human human = (Human)agent
  \item  human.energy = RandomHelper.nextIntFromTo(4, 10)
  \item  human.startEnergy = human.energy
@@ -433,7 +450,7 @@ Task Create Humans
 
 Task Create Zombies
 \begin{enumerate}
- \item CreateAgents(''FlowZombies", ''FlowZombies.Zombie",zombieCount)
+ \item CreateAgents(''FlowZombies'', ``FlowZombies.Zombie'',zombieCount)
 \end{enumerate}
 
 \begin{figure}[p]
@@ -461,8 +478,6 @@ Task Create Zombies
 \FloatBarrier
 
 Before we run this model, we need to update the metadata that the Repast Simphony runtime uses to help create displays and other runtime components. Open the FlowZombies.rs folder under the project folder, and double click on the \texttt{context.xml} file.
-
-
 
 That should bring up the xml editor for editing the \texttt{context.xml} file. The \texttt{context.xml} file describes the context hierarchy for your model. The context hierarchy is composed of the contexts your model uses and the projections associated with them. 
 
@@ -506,7 +521,9 @@ Now its time to launch the model. When we created our project using the Repast S
 \end{center}
 \end{figure}
 
-We will now create a simple display. 
+When the model window appears, we can observe the Scenario Tree on the left hand side of the window.  The Scenario Tree allows us to customize things like model initialization, data logging, and displays.  We first need to specify how the model is initialized and we will do so with the ModelInitializer agent we created.  In the Scenario Tree right click on the Data Loaders and select ``Set Data Loader.''  A list appears with the various types of data loading options available.  Select ``Context.xml file and ModelInitializer'' and then click Next and Finish.
+
+Next, we will now create a simple display. 
 
 \vspace{.2in}
 \begin{enumerate}
