Fixed typo, updated to Java 1.8 and removed JOGL and Java3D references.

--- a/docs/RepastFlowGettingStarted/RepastFlowGettingStarted.tex
+++ b/docs/RepastFlowGettingStarted/RepastFlowGettingStarted.tex
@@ -143,7 +143,7 @@ To create a new Flowchart agent, right click on the created ``FlowZombies'' pack
 \end{center}
 \end{figure}
 
-The \texttt{Zombie.agent}  and \texttt{Human.agent} files (along with the automatically generated \texttt{Zombie.groovy}  and \texttt{Human.groovy} files) should be visible in the FlowZombies packages underneath the src folder, and the Agent flowcharts should be open in Eclipse's editor pane. (If ihey are not open, double click on each \texttt{Human.agent} file to open it). Let's begin with the Zombies. The Zombies behavior is to wander around looking for Human's to infect. More specifically, each iteration of the simulation, each Zombie will determine where the most Humans are within its local area and move there. Once there it will attempt to infect a Human at that location and turn it into a Zombie. 
+The \texttt{Zombie.agent}  and \texttt{Human.agent} files (along with the automatically generated \texttt{Zombie.groovy}  and \texttt{Human.groovy} files) should be visible in the FlowZombies packages underneath the src folder, and the Agent flowcharts should be open in Eclipse's editor pane. (If they are not open, double click on each \texttt{Human.agent} file to open it). Let's begin with the Zombies. The Zombies behavior is to wander around looking for Human's to infect. More specifically, each iteration of the simulation, each Zombie will determine where the most Humans are within its local area and move there. Once there it will attempt to infect a Human at that location and turn it into a Zombie. 
 
 We will begin by implementing the movement. To do this we will locate the Zombies and Humans within a \texttt{Grid}. The \texttt{Grid} allows us to do neighborhood and proximity queries (i.e. ``who is near me?'') using discrete integer Grid coordinates.\footnote{More details on \texttt{Grid} can found in the Repast Java API documentation and the Repast Reference.} Let's begin by adding a property to the Zombie Agent that indicates whether the Zombie has moved.  To create a Property block in the Flowchart, click on the Property icon the the Steps pane and then click on the Flowchart canvas.  The Property block will appear and may be selected.  Selecting an element in a flowchart allows the element to be edited using the Properties pane at the bottom of the window.  If the Properties pane is not visible, right click on a flowchart element and select ``Show Properties.''
 
@@ -619,7 +619,7 @@ Once the Repast Simphony runtime has come up, initialize and run the simulation.
 
 \subsection{Model Distribution}
 
-Repast models can be distributed to model users via the installation builder. This feature packs up your model and all of the software you need to run it, except for a properly configured Java Runtime Environment, into a single Java archive ("JAR") file that can be given to model users. The resulting installer can be executed on any system with Java version 1.6 or later; JOGL; and Java3D installed\footnote{Users can obtain free JOGL and Java3D files from the Repast website downloads page \href{http://repast.sourceforge.net/downloads.html}{here}.}. Users simply copy the installer file onto their Windows, Mac OS, or Linux computers and the start the installer by double clicking on the file. Once the installer is started it will show an installation wizard that will prompt the user for the information needed to install the model. If desired, the installer can also be run in a command line mode.
+Repast models can be distributed to model users via the installation builder. This feature packs up your model and all of the software you need to run it, except for a properly configured Java Runtime Environment, into a single Java archive ("JAR") file that can be given to model users. The resulting installer can be executed on any system with Java version 1.8 or later. Users simply copy the installer file onto their Windows, Mac OS, or Linux computers and the start the installer by double clicking on the file. Once the installer is started it will show an installation wizard that will prompt the user for the information needed to install the model. If desired, the installer can also be run in a command line mode.
 
 Building an installer for a model is straightforward. Simply choose the ``Build Installer for $\langle$Your Model Name Here$\rangle$ Model'' and provide a location and name for the installer file. The installer file's default name is ``setup.jar,'' which is suitable for most purposes. The install builder will then package and compress your model and the supporting Repast software. The resulting installer files are about 70 MB plus the size of the model code and data. 75 MB to 80 MB is a common total size.
 
